# AndroidNativeTools

./: .gitignore  README.md  build.gradle  module.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/libpagemap/: pm_map.c
gradle/wrapper/: gradle-wrapper.properties
module/: build.gradle
module/src/main/: AndroidManifest.xml
module/src/main/cpp/procrank/: procrank.cpp
module/src/main/cpp/procrank/android-base/: file.cpp
